# sc2-rs

./: .rustfmt.toml  Cargo.toml  Makefile  README.md  clippy.toml  generate_ids.py
.github/workflows/: rust.yml
examples/: debug-bot.rs  events.rs  reaper-rush.rs  runner.rs  speed-mining.rs  worker-rush.rs  zerg-rush.rs
examples/ex_main/: mod.rs
sc2-macro/: Cargo.toml
sc2-macro/macro/: Cargo.toml
sc2-macro/macro/src/: lib.rs
sc2-macro/src/: lib.rs
src/: action.rs  api.rs  bot.rs  client.rs  consts.rs  debug.rs  game_data.rs  game_info.rs  game_state.rs  geometry.rs  lib.rs  pixel_map.rs  player.rs  ramp.rs  score.rs  unit.rs
src/distance/: mod.rs  rayon.rs
src/ids/: ability_id.rs  buff_id.rs  upgrade_id.rs
src/units/: iter.rs  mod.rs  rayon.rs
src/utils/: mod.rs
