[package]
name = "sc2"
version = "1.2.1"
authors = [
    "Armageddon <lunyx1337@gmail.com>",
    "Dat Nguyen <nguyenthdat@outlook.com>",
]
edition = "2021"
description = "Rust implementation of StarCraft II API"
repository = "https://github.com/UltraMachine/rust-sc2"
readme = "README.md"
license = "MIT"

[lib]
name = "sc2"
path = "src/lib.rs"

[dependencies]
sc2-proto = { git = "https://github.com/nguyenthdat/sc2-proto-rs" }
protobuf = { version = "3", features = ["with-bytes"] }
sc2-macro = { path = "sc2-macro", version = "1" }
tungstenite = { version = "0.27.0", features = ["native-tls-vendored"] }
ndarray = "0.16"
num-traits = "0.2"
num-derive = "^0.4.2"
itertools = "0.14.0"
lazy_static = "^1"
maplit = "^1.0"
rand = "0.9"
log = "^0.4"
rustc-hash = "2"
rayon = { version = "^1.11", optional = true }
parking_lot = { version = "0.12.4", optional = true }
indexmap = "2.10.0"
serde = { version = "1.0.219", features = ["derive"], optional = true }
lazy-init = "0.5.1"
once_cell = "1.21.3"
dirs = "6.0.0"

[target.'cfg(windows)'.dependencies]
regex = "1.11"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }

[features]
default = ["protoc", "enemies_cache", "rayon", "serde"]
protoc = ["sc2-proto/protoc-rust"]
enemies_cache = []
wine_sc2 = []
rayon = ["dep:rayon", "indexmap/rayon", "ndarray/rayon"]
