[package]
name = "sc2-proc-macro"
version = "1.0.0"
authors = ["Armageddon <lunyx1337@gmail.com>"]
edition = "2024"
description = "Procedural macros for rust-sc2 API"
repository = "https://github.com/UltraMachine/rust-sc2"
readme = "../../README.md"
license-file = "../../LICENSE"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = ["full"] }
quote = "^1.0"
regex = "^1"
