[package]
name = "sc2-proc-macro"
version = "1.0.1"
description = "Procedural macros for rust-sc2 API"
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
regex = "1"
